--- a/css/screen.scss
+++ b/css/screen.scss
@@ -528,8 +528,42 @@ header#site-header {
 	    	margin-top: 10px;
 	    	margin-bottom: 40px;
 	    }
-	    #header-thumb {
+	    .header-thumb {
 	    	margin-bottom: 10px;
+	    	text-align: center;
+
+	    	.video-embed-container { // para hacer el video responsive
+				position: relative; 
+				padding-bottom: 56.25%; 
+				height: 0; 
+				overflow: hidden; 
+				max-width: 100%; 
+				width: 100%;
+				height: auto;
+				margin: 0 auto;
+				}
+
+			.video-embed-container iframe,
+			.video-embed-container object,
+			.video-embed-container embed {
+				position: absolute; 
+				top: 0; 
+				left: 0; 
+				width: 100%; 
+				height: 100%;
+			}			
+
+	    	img {
+	    		margin: 0 auto;
+	    	}
+	    	img.orientation-horizontal {
+	    		width: 100%;
+	    		height: auto;
+	    	}
+	    	img.orientation-vertical {
+	    		width: auto;
+	    		max-height: 700px;
+	    	}
 	    }
 		h1 {
 			text-align: center;
@@ -1804,13 +1838,14 @@ aside#sidebar {
 	height: 25px;
 	display: inline-block;
 }
-.avatar-author {
+.avatar {
 	background: #111 url(../images/avatar.jpg) no-repeat center center;
 	width: 50px;
 	height: 50px;
 	display: inline-block;
 	@include border-radius(1000px);
 	margin-right: 10px;
+	float: left;
 }
 .hr-icon {
 	@include pie-clearfix;
@@ -1995,7 +2030,6 @@ video#bgvid {
 		padding: 0 0 90px 0;
 	}	
 	#interaccion {
-		border-top: 1px solid $box-border;
 		margin-top: 30px;
 		@include at-breakpoint($tablet-v) {
 			margin-top: 40px;
