--- a/css/screen.scss
+++ b/css/screen.scss
@@ -141,7 +141,13 @@ body {
 		border-left: 1px solid $box-border2;
 		border-right: 1px solid $box-border2;
 		@include box-shadow(0 0 10px rgba(0,0,0,.1));
-    } 
+    }
+}
+.page-header {
+    @include at-breakpoint($tablet-v) { 
+		background: #a80808;
+		height: 100px;
+    }
 }
 a {
 	text-decoration: none;
@@ -254,7 +260,7 @@ img.alignnone {
 	font-size: 11px;
 	@include pie-clearfix;
     @include at-breakpoint($tablet-h) { 
-		padding: 11px 0 9px;
+		/*padding: 11px 0 9px;*/
     }
 	nav {
 		text-align: right;
@@ -285,55 +291,130 @@ img.alignnone {
 
 header#site-header {
 	@include pie-clearfix;
-	background: #fff;
+	background: #b30909;
 	position: relative;
 	z-index: 9998;
-	border-bottom: 1px solid #e6e6e6;
+	border-left: 1px solid #a80808;
+	border-right: 1px solid #a80808;
 	padding: 0 $gutter-width;
 	@include box-shadow(0 0 10px rgba(0,0,0,.1));
     @include at-breakpoint($tablet-v) { 
-		@include bleed($gutter-width/1.5);
-		border: 1px solid #e6e6e6;
-		height: 100px;
-		padding-right: 30px !important;
+		padding: 0 22px 0 0;
     }
 	.site-logo {
-		float: left;
-		text-decoration: none;
 		overflow: hidden;
-		padding: 20px 0 19px 0;
-	    @include at-breakpoint($tablet-v) { 
-			padding-left: 20px !important;
-			@include bleed($gutter-width/1.5,left);
-			//background: $color-1 url(../images/bg-header.png) no-repeat right top;
-			padding-right: 105px;
-	    }
-		svg {
-			width: 140px;
-			height: 19px;
+		@include pie-clearfix;
+		text-decoration: none;
+		float: left;
+		display: block;
+	    #logo-header {
+			float: left;
+			overflow: hidden;
+			padding: 20px 0px 19px 0px;
+			position: relative;
+			z-index: 2;
 	    	@include at-breakpoint($tablet-v) {
-				margin-bottom: 10px;
-				width: 285px;
-				height: 38px;
+				padding: 20px 30px 19px 22px;
+				background: $color-1;
 			}
-			path {
-  				fill: $color-1;
-		    	/*@include at-breakpoint($tablet-v) {
-  					fill: #fff;
-				}*/
+			svg {
+				width: 140px;
+				height: 19px;
+				@include transition(all .2s ease);
+		    	@include at-breakpoint($tablet-v) {
+					margin-bottom: 10px;
+					width: 285px;
+					height: 38px;
+				}
+				path {
+	  				fill: #fff;
+				}
 			}
-		}
-		time {
-			color: $color-text-alt;
-			font-size: 11px;
+			time {
+				color: #fff;
+				font-size: 11px;
+				display: none;
+		    	@include at-breakpoint($tablet-v) {
+		    		display: block;
+					//color: #fff;
+				}
+				span {
+					display: inline-block;
+					text-transform: lowercase;
+				}
+			}
+	    }
+		#barras-header {
 			display: none;
+			@include pie-clearfix;
+			position: relative;
+			left: -30px;
+			z-index: 3;
+			float: left;
+			width: 60px;
 	    	@include at-breakpoint($tablet-v) {
 	    		display: block;
-				//color: #fff;
 			}
-			span {
-				display: inline-block;
-				text-transform: lowercase;
+			.barra-header {
+				width: 20px;
+				height: 100px;
+				display: block;
+				float: left;
+				position: relative;
+			    @include transform(skew(-30deg));
+				&.barra-1 {
+					background: #cc0a0a;
+					@include transition(all .2s ease);
+					z-index: 4;
+				}
+				&.barra-2 {
+					background: #c40a0a;
+					@include transition(all .4s ease);
+					z-index: 3;
+				}
+				&.barra-3 {
+					background: #ba0909;
+					@include transition(all .6s ease);
+					z-index: 2;
+				}
+			}
+		}
+		&:hover {
+			#logo-header {
+				svg {
+					padding: 0.5px;
+				}
+			}
+			#barras-header {
+				.barra-header {
+					&.barra-1 {
+						@include transition(all .2s ease);
+						@include box-shadow(0 5px 10px rgba(0,0,0,0.03));
+					}
+					&.barra-2 {
+						@include transition(all .4s ease);
+						@include box-shadow(0 5px 10px rgba(0,0,0,0.1));
+					}
+					&.barra-3 {
+						@include transition(all .6s ease);
+						@include box-shadow(0 5px 10px rgba(0,0,0,0.15));
+					}
+				}
+			}
+		}
+		&:active {
+			#barras-header {
+				.barra-header {
+					&.barra-1 {
+						@include box-shadow(none);
+					}
+					&.barra-2 {
+						@include box-shadow(none);
+					}
+					&.barra-3 {
+						@include box-shadow(none);
+					}
+				}
 			}
 		}
 	}
@@ -348,7 +429,7 @@ header#site-header {
 		}
 		li {
 			display: inline-block;
-			margin-left: 15px;
+			margin-left: 5px;
 			height: 30px;
 			margin-top: 3px;
 			@include at-breakpoint($tablet-v) {
@@ -356,15 +437,16 @@ header#site-header {
 			}
 
 			a {
+				padding: 0 5px;
 				text-decoration: none;
-				color: $color-text-aside;
 				font-family: 'fontello';
 				i {
-					@include transition(color .2s ease);
+					color: #fff;
+					@include transition(color .15s ease);
 				}
 				&:hover {
 					i {
-						color: $color-1;
+						color: #940909;
 					}
 				}
 			}
@@ -381,24 +463,32 @@ header#site-header {
 	form {
 		margin-top: 25px;
 		display: none;
-		margin-left: 30px;
-		margin-right: 10px;
 		width: 260px;
 		position: relative;
 		@include at-breakpoint($tablet-h) {
 			display: block;
+			margin-left: 20px;
+			margin-right: 5px;
+		}
+		@include at-breakpoint($computer) {
+			margin-left: 30px;
+			margin-right: 10px;
 		}
 		.input-search {
+			@include border-radius(2px);
+			outline: none;
 			width: 100%;
 			height: 50px;
-			background: white url(../images/icon-search.png) 93% center no-repeat;
-			border: 1px solid $box-border;
+			background: #b30909 url(../images/icon-search.png) 93% center no-repeat;
+			border: 1px solid #fff;
 			box-sizing: border-box;
-			padding: 10px;	
-			color: $color-text-alt;
+			padding: 10px 50px 10px 20px;	
+			color: #fff;
 			font-size: 11px;
-			@include transition(background .2s ease);
+			@include transition(all .2s ease);
 			&:focus {
+				color: $color-text-alt;
+				background-color: #fff;
 				background-image: url(../images/icon-search-focus.png);
 			}
 		}
@@ -423,12 +513,13 @@ header#site-header {
 		}
 		a {
 			i {
-				color: $color-1;
-				@include transition(color .2s ease);
+				padding: 0 3px;
+				color: #fff;
+				@include transition(color .15s ease);
 			}
 			&:hover {
 				i {
-					color: #800606;
+					color: #940909;
 				}
 			}
 		}
@@ -438,6 +529,38 @@ header#site-header {
 			display: none;
 		}
 	}
+}
+
+/* Input placeholder */
+
+.input-search::-webkit-input-placeholder { /* WebKit browsers */
+    color: #fff;
+}
+.input-search:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: #fff;
+   opacity: 1;
+}
+.input-search::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: #fff;
+   opacity: 1;
+}
+.input-search:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color: #fff;
+}
+
+.input-search:focus::-webkit-input-placeholder { /* WebKit browsers */
+   color: $color-text-alt;
+}
+.input-search:focus:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: $color-text-alt;
+   opacity: 1;
+}
+.input-search:focus::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: $color-text-alt;
+   opacity: 1;
+}
+.input-search:focus:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color: $color-text-alt;
 }
 
 
@@ -570,15 +693,13 @@ header#site-header {
 		background: $color-text;
 	    margin: 0;
 	    @include at-breakpoint($tablet-v) {
-	    	@include bleed($gutter-width*1.8);
+	    	@include bleed(20px);
 			padding: 40px 90px 45px 90px !important;
-	    	margin-top: 10px;
 	    	margin-bottom: 40px;
 	    }
 	    @include at-breakpoint($computer) {
-	    	@include bleed($gutter-width*3);
+	    	@include bleed(40px);
 			padding: 40px 90px 45px 90px !important;
-	    	margin-top: 10px;
 	    	margin-bottom: 40px;
 	    }
 	    .header-thumb {
@@ -658,13 +779,13 @@ header#site-header {
 		margin-bottom: 20px;
 		height: 200px;
 	    @include at-breakpoint($tablet-v) {
-	    	margin: 10px 0 30px 0;
+	    	margin: 0 0 30px 0;
 			height: 400px;
-	    	@include bleed($gutter-width*2);
+	    	@include bleed(20px);
 	    }
 	    @include at-breakpoint($computer) {
-	    	margin: 10px 0 50px 0;
-	    	@include bleed($gutter-width*3);
+	    	margin: 0 0 50px 0;
+	    	@include bleed(40px);
 	    }
 	    .title-dossier {
 	    	width: 100%;
@@ -1435,6 +1556,12 @@ header#site-header {
 				@include at-breakpoint($tablet-v) {
 					width: 50px;							
 				}
+				&.custom {
+					display: none;
+					@include at-breakpoint($tablet-v) {
+						display: inline;
+					}
+				}	
 				&.share-facebook, &.share-twitter {
 					@include at-breakpoint($computer) {
 						width: 120px;								
@@ -1544,12 +1671,6 @@ header#site-header {
 		a.share-mail:hover { background: lighten(#5b5b5b, 5%); }
 		a.custom:hover { background: lighten(#5b5b5b, 5%); }
 
-		a.custom {
-			display: none;
-			@include at-breakpoint($computer) {
-				display: inline;
-			}
-		}	
 	}
 }
 
@@ -2484,9 +2605,9 @@ aside#sidebar {
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
 	-moz-transform: translatez(0);
-    	-ms-transform: translatez(0);
-    	-o-transform: translatez(0);
-    	transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
 }
 
 .bx-wrapper .bx-pager,
@@ -2551,7 +2672,7 @@ aside#sidebar {
 	background: url(../images/arrow-left-mobile.png) no-repeat 10px 14px;
 	background-color: #1f1f1f;
 	left: -1px;
-	@include border-radius(0 0 2px 2px);
+	@include border-radius(0 2px 2px 0);
 	@include at-breakpoint($tablet-v) {
 		left: -65px;
 		background: url(../images/arrow-left.png) no-repeat center center;
@@ -2563,7 +2684,7 @@ aside#sidebar {
 	background: url(../images/arrow-right-mobile.png) no-repeat 18px 14px;
 	background-color: #1f1f1f;
 	right: -1px;
-	@include border-radius(2px 2px 0 0);
+	@include border-radius(2px 0 0 2px);
 	@include at-breakpoint($tablet-v) {
 		right: -65px;
 		background: url(../images/arrow-right.png) no-repeat center center;
