--- a/css/screen.scss
+++ b/css/screen.scss
@@ -302,20 +302,21 @@ header#site-header {
 		padding: 0 22px 0 0;
     }
 	.site-logo {
-		overflow: hidden;
-		@include pie-clearfix;
 		text-decoration: none;
 		float: left;
 		display: block;
+		position: relative;
+		overflow: hidden;
+		width: 430px;
+		@include pie-clearfix;
 	    #logo-header {
 			float: left;
 			overflow: hidden;
 			padding: 20px 0px 19px 0px;
 			position: relative;
-			z-index: 2;
+			z-index: 6;
 	    	@include at-breakpoint($tablet-v) {
 				padding: 20px 30px 19px 22px;
-				background: $color-1;
 			}
 			svg {
 				width: 140px;
@@ -347,57 +348,62 @@ header#site-header {
 		#barras-header {
 			display: none;
 			@include pie-clearfix;
-			position: relative;
+			position: absolute;
 			left: -30px;
+			top: 0;
 			z-index: 3;
 			float: left;
-			width: 60px;
+			width: 430px;
 	    	@include at-breakpoint($tablet-v) {
 	    		display: block;
 			}
 			.barra-header {
+				top: 0;
 				width: 20px;
 				height: 100px;
 				display: block;
 				float: left;
-				position: relative;
-			    @include transform(skew(-30deg));
+				position: absolute;
+			    @include transform(skew(-30deg));    
 				&.barra-1 {
-					background: #cc0a0a;
-					@include transition(all .2s ease);
-					z-index: 4;
+					width: 340px;
+					background: $color-1;
+					z-index: 5;
 				}
 				&.barra-2 {
+					left: 340px;
 					background: #c40a0a;
-					@include transition(all .4s ease);
+				    -webkit-animation: show .6s; /* Safari, Chrome and Opera > 12.1 */
+			        -moz-animation: show .6s; /* Firefox < 16 */
+			        -ms-animation: show .6s; /* Internet Explorer */
+			        -o-animation: show .6s; /* Opera < 12.1 */
+			        animation: show .6s;
 					z-index: 3;
+					@include transition(all .6s ease);
 				}
 				&.barra-3 {
+					left: 360px;
 					background: #ba0909;
-					@include transition(all .6s ease);
+				    -webkit-animation: show2 .8s; /* Safari, Chrome and Opera > 12.1 */
+			        -moz-animation: show2 .8s; /* Firefox < 16 */
+			        -ms-animation: show2 .8s; /* Internet Explorer */
+			        -o-animation: show2 .8s; /* Opera < 12.1 */
+			        animation: show2 .8s;
 					z-index: 2;
+					@include transition(all .8s ease);
 				}
 			}
 		}
 		&:hover {
-			#logo-header {
-				svg {
-					padding: 0.5px;
-				}
-			}
 			#barras-header {
 				.barra-header {
-					&.barra-1 {
-						@include transition(all .2s ease);
-						@include box-shadow(0 5px 10px rgba(0,0,0,0.03));
-					}
 					&.barra-2 {
-						@include transition(all .4s ease);
-						@include box-shadow(0 5px 10px rgba(0,0,0,0.1));
+						left: 300px;
+						@include box-shadow(0 5px 10px rgba(0,0,0,0.05));
 					}
 					&.barra-3 {
-						@include transition(all .6s ease);
-						@include box-shadow(0 5px 10px rgba(0,0,0,0.15));
+						left: 320px;
+						@include box-shadow(0 5px 10px rgba(0,0,0,0.1));
 					}
 				}
 			}
@@ -529,6 +535,108 @@ header#site-header {
 			display: none;
 		}
 	}
+}
+
+/* Show */
+
+@keyframes show {
+    from { 
+    	left: 300px;  
+    }
+    to   { 
+    	left: 340px; 
+    }					
+}
+
+/* Firefox < 16 */
+@-moz-keyframes show {
+    from { 
+    	left: 300px;  
+    }
+    to   { 
+    	left: 340px; 
+    }	
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes show {
+    from { 
+    	left: 300px;  
+    }
+    to   { 
+    	left: 340px; 
+    }	
+}
+
+/* Internet Explorer */
+@-ms-keyframes show {
+    from { 
+    	left: 300px;  
+    }
+    to   { 
+    	left: 340px; 
+    }	
+}
+
+/* Opera < 12.1 */
+@-o-keyframes show {
+    from { 
+    	left: 300px;  
+    }
+    to   { 
+    	left: 340px; 
+    }	
+}
+
+/* Show2 */
+
+@keyframes show2 {
+    from { 
+    	left: 320px;  
+    }
+    to   { 
+    	left: 360px; 
+    }					
+}
+
+/* Firefox < 16 */
+@-moz-keyframes show2 {
+    from { 
+    	left: 320px;  
+    }
+    to   { 
+    	left: 360px; 
+    }		
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes show2 {
+    from { 
+    	left: 320px;  
+    }
+    to   { 
+    	left: 360px; 
+    }				
+}
+
+/* Internet Explorer */
+@-ms-keyframes show2 {
+    from { 
+    	left: 320px;  
+    }
+    to   { 
+    	left: 360px; 
+    }			
+}
+
+/* Opera < 12.1 */
+@-o-keyframes show2 {
+    from { 
+    	left: 320px;  
+    }
+    to   { 
+    	left: 360px; 
+    }		
 }
 
 /* Input placeholder */
@@ -1349,6 +1457,7 @@ header#site-header {
 				line-height: 120%;
 				font-size: 14px;
 				width: 75%;
+				margin-top: 4px;
 				@include at-breakpoint($mobile-h) {
 					width: 75%;
 				}
@@ -1356,13 +1465,15 @@ header#site-header {
 					line-height: 150%;
 					font-size: 16px;
 					width: 85%;
+					margin-top: 0px;
 				}
-				span { display: block; float: left; }
+				span { display: block;}
 				span:first-letter {
 					text-transform: lowercase;
 					} 
 			}
 			strong {
+				font-family: $fira;
 				font-weight: bold;
 				font-style: italic;
 				float: left;
@@ -2108,6 +2219,8 @@ aside#sidebar {
 			}
 			ul {
 				list-style: none;
+				max-height: 500px;
+				overflow: auto;
 				li {
 					a {
 						display: block;
@@ -2152,6 +2265,27 @@ aside#sidebar {
 			}
 		}
     }
+}
+
+#dossier-sumary ul::-webkit-scrollbar{
+  width: 13px;
+
+}
+#dossier-sumary ul::-webkit-scrollbar-button{
+}
+#dossier-sumary ul::-webkit-scrollbar-track{
+  background: $box-bg;
+  padding: 2px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+}
+#dossier-sumary ul::-webkit-scrollbar-thumb{
+  background: rgba(0,0,0,0.2);
+  border: 1px solid rgba(0,0,0,0.1);
+  @include border-radius(2px);
+}
+#dossier-sumary ul::-webkit-scrollbar-thumb:hover{
+  background: rgba(0,0,0,0.3);
+  border: 1px solid rgba(0,0,0,0.2);
 }
 
 // Long Form
